RESOLVED FIXED182237
WebDriver: ASSERTION FAILED: !m_loadTimer.isActive()
https://bugs.webkit.org/show_bug.cgi?id=182237
Summary WebDriver: ASSERTION FAILED: !m_loadTimer.isActive()
Carlos Garcia Campos
Reported 2018-01-29 03:14:39 PST
ASSERTION FAILED: !m_loadTimer.isActive() /home/slave/webkitgtk/gtk-linux-64-debug/build/Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp(468) : void WebKit::WebAutomationSession::waitForNavigationToCompleteOnPage(WebKit::WebPageProxy&, Inspector::Protocol::Automation::PageLoadStrategy, WTF::Seconds, WTF::Ref<Inspector::BackendDispatcher::CallbackBase>&&) 1 0x7f8df3805a86 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x7f8df3805a86] 2 0x7f8dfcc5eb0a /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit20WebAutomationSession33waitForNavigationToCompleteOnPageERNS_12WebPageProxyEN9Inspector8Protocol10Automation16PageLoadStrategyEN3WTF7SecondsEONS7_3RefINS3_17BackendDispatcher12CallbackBaseENS7_13DumbPtrTraitsISB_EEEE+0x6c) [0x7f8dfcc5eb0a] 3 0x7f8dfcc5ea68 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit20WebAutomationSession27waitForNavigationToCompleteERN3WTF6StringERKS2_PS4_S6_PKiONS1_3RefIN9Inspector34AutomationBackendDispatcherHandler35WaitForNavigationToCompleteCallbackENS1_13DumbPtrTraitsISC_EEEE+0x3a4) [0x7f8dfcc5ea68] 4 0x7f8dfd1870e9 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN9Inspector27AutomationBackendDispatcher27waitForNavigationToCompleteElON3WTF6RefPtrINS1_8JSONImpl6ObjectENS1_13DumbPtrTraitsIS4_EEEE+0x3a9) [0x7f8dfd1870e9] 5 0x7f8dfd1844c5 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN9Inspector27AutomationBackendDispatcher8dispatchElRKN3WTF6StringEONS1_3RefINS1_8JSONImpl6ObjectENS1_13DumbPtrTraitsIS7_EEEE+0x33b) [0x7f8dfd1844c5] 6 0x7f8df312f228 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN9Inspector17BackendDispatcher8dispatchERKN3WTF6StringE+0x7da) [0x7f8df312f228] 7 0x7f8dfcc5c59c /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit20WebAutomationSession25dispatchMessageFromRemoteERKN3WTF6StringE+0x32) [0x7f8dfcc5c59c] 8 0x7f8df31dddcf /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN9Inspector24RemoteConnectionToTarget19sendMessageToTargetERKN3WTF6StringE+0x85) [0x7f8df31dddcf] 9 0x7f8df31df8d9 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN9Inspector15RemoteInspector19sendMessageToTargetEjPKc+0x5b) [0x7f8df31df8d9] 10 0x7f8df31e14e5 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN9Inspector21RemoteInspectorServer20sendMessageToBackendEP16_GDBusConnectionmmPKc+0xff) [0x7f8df31e14e5] 11 0x7f8df31dfd0e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x2361d0e) [0x7f8df31dfd0e] 12 0x7f8df31dff20 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x2361f20) [0x7f8df31dff20] 13 0x7f8df54da4cc /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgio-2.0.so.0(+0xb94cc) [0x7f8df54da4cc] 14 0x7f8df535481a /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_context_dispatch+0x13a) [0x7f8df535481a] 15 0x7f8df5354ba8 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x49ba8) [0x7f8df5354ba8] 16 0x7f8df5354ec2 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_loop_run+0xc2) [0x7f8df5354ec2] 17 0x7f8df5903f95 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgtk-3.so.0(gtk_main+0x85) [0x7f8df5903f95] 18 0x55e51ee89083 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/MiniBrowser(main+0x629) [0x55e51ee89083] 19 0x7f8deb3d12b1 /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf1) [0x7f8deb3d12b1] 20 0x55e51ee7bd9a /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/MiniBrowser(_start+0x2a) [0x55e51ee7bd9a] RemoteInspectorServer failed to send DBus message: The connection is closed
Attachments
Patch (1.48 KB, patch)
2018-01-29 03:16 PST, Carlos Garcia Campos
clopez: review+
Carlos Garcia Campos
Comment 1 2018-01-29 03:16:28 PST
Carlos Garcia Campos
Comment 2 2018-01-29 08:47:16 PST
Radar WebKit Bug Importer
Comment 3 2018-01-29 08:49:46 PST
Note You need to log in before you can comment on or make changes to this bug.