WebDriver: ASSERTION FAILED: !m_loadTimer.isActive() https://bugs.webkit.org/show_bug.cgi?id=182237

Reviewed by Carlos Alberto Lopez Perez.

We should stop the load timer when we dispatch the pending navigation callbacks due to an alert open.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::willShowJavaScriptDialog):

Canonical link: https://commits.webkit.org/198042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227733 268f45cc-cd09-0410-ab3c-d52691b4dbfc